fix job page, header page, index page recruit 2016 on mobile

--- a/public_html/wp-content/themes/recruit-ja2016/css/job.less
+++ b/public_html/wp-content/themes/recruit-ja2016/css/job.less
@@ -42,7 +42,6 @@
 		h1{
 			font-size:@font-size-18;
 			font-weight:bold;
-			margin-top:0;
 			border-left:solid 3px @color-red;
 			padding:4px 5px;
 		}	
@@ -63,10 +62,20 @@
 
 @media (min-width: 320px) {
 	.job-content{	
+		.job-content-2{
+			h1{
+				margin-top:20px;
+			}
+		}
 	}
 }
 @media (min-width: 768px) { 
 	.job-content{	
+		.job-content-2{
+			h1{
+				margin-top:0px;
+			}
+		}	
 	}
 }
 
